--- a/GarageSale/GarageSale.Site/_Imports.razor
+++ b/GarageSale/GarageSale.Site/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using GarageSale.Site
 @using GarageSale.Site.Shared
+@using GarageSale.Site.Common
+@using GarageSale.Shared.ItemDtos
