--- a/GarageSale/GarageSale.Site/Pages/Item/ViewItems.razor
+++ b/GarageSale/GarageSale.Site/Pages/Item/ViewItems.razor
@@ -1,4 +1,5 @@
 ﻿@page "/garage-sale/items"
+@inherits GarageSaleComponentBase<ItemDto>
 <h3>Garage Sale Items</h3>
 
 @if (Service.IsFetchingData)
@@ -17,7 +18,9 @@ else
 	@foreach (var item in items)
 	{
 		<tr>
-			<td>@item.Name</td>
+			<td>
+				<a href="/garage-sale/items/@item.Id">@item.Name</a>
+			</td>
 			<td>@item.Description</td>
 			<td>@item.IsForSale</td>
 			<td>
