--- a/GarageSale/GarageSale.Site/Pages/Item/CreateItem.razor
+++ b/GarageSale/GarageSale.Site/Pages/Item/CreateItem.razor
@@ -10,17 +10,19 @@
 <EditForm Model="@Dto" OnValidSubmit="@HandleValidSubmit">
 	<DataAnnotationsValidator />
 	<ValidationSummary />
-	<div>
-		<label for="name">Name</label>
-		<InputText id="name" @bind-Value="@Dto.Name" />
-	</div>
-	<div>
-		<label for="description">Description</label>
-		<InputTextArea id="description" @bind-Value="@Dto.Description" />
-	</div>
-	<div>
-		<label for="isForSale">For Sale</label>
-		<InputCheckbox id="isForSale" @bind-Value="@Dto.IsForSale" />
-	</div>
+	<table>
+		<tr>
+			<td><label for="name">Name</label></td>
+			<td><InputText id="name" @bind-Value="@Dto.Name" /></td>
+		</tr>
+		<tr>
+			<td><label for="description">Description</label></td>
+			<td><InputTextArea id="description" @bind-Value="@Dto.Description" /></td>
+		</tr>
+		<tr>
+			<td><label for="isForSale">For Sale</label></td>
+			<td><InputCheckbox id="isForSale" @bind-Value="@Dto.IsForSale" /></td>
+		</tr>
+	</table>
 	<button type="submit">Submit</button>
 </EditForm>
